2010-08-26  Mark Rowe  <mrowe@apple.com>

        Darin pointed out that the braces are unnecessary in an Objective-C interface
        declaration when there are no data members.

        * platform/graphics/mac/MediaPlayerPrivateQTKit.mm: Begone, evil braces!

2010-08-26  Gavin Barraclough  <barraclough@apple.com>

        Rubber Stamped by Oliver Hunt.

        Partially revert r65959. The toString changes regressed the v8 tests,
        but keep the toFixed/toExponential/toPrecision changes.

        * html/HTMLTreeBuilder.cpp:
        (WebCore::serializeForNumberType):

2010-08-26  Mark Rowe  <mrowe@apple.com>

        Reviewed by Adam Roben.

        Fix two build issues that are revealed when building with clang.

        * platform/mac/PopupMenuMac.h: Forward-declare as an Objective-C class when compiling for Objective-C.
        * platform/network/BlobResourceHandle.h: Forward-declare as a struct to match the real declaration.

2010-08-26  Mark Rowe  <mrowe@apple.com>

        Reviewed by Sam Weinig.

        <rdar://problem/8339008> WebCore's MediaPlayerPrivateQTKit.mm fails to build with clang.

        * platform/graphics/mac/MediaPlayerPrivateQTKit.mm:
        (WebCore::mainThreadSetNeedsDisplay): Remove some ambiguity in the return type of -delegate.
        Since the message was being sent to a receiver of type id the compiler cannot accurately
        determine the return type. Typically this would be resolved by using a more specific type
        for the receiver. However, due to lazy loading shenanigans that we play with QTKit we're
        unable to directly cast to the relevant type (QTMovieView*). Instead we fake up an interface
        with the correct type of the method we care about (-delegate) and cast to that type instead.

2010-08-26  Andy Estes  <aestes@apple.com>

        Reviewed by Darin Adler.

        If an <embed> is part of an <object> element's fallback content, WebKit